<resources>
    <string name="app_name">ILC Apps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="company">Company</string>
    <string name="admin">Admin</string>
    <string name="student">Student</string>

    <string name="verificationCompany">002</string>
    <string name="verificationAdmin">001</string>

    //Report
    <string name="tv_reportQuestion1">1. Bagaimana kemampuan x terhadap z dalam menyelesaikan tanggung jawabnya?</string>
    <string name="tv_reportQuestion2">2. Bagaimana kemampuan x terhadap z dalam menyelesaikan tanggung jawabnya?</string>
    <string name="tv_reportQuestion3">3. Bagaimana kemampuan x terhadap z dalam menyelesaikan tanggung jawabnya?</string>
    <string name="tv_reportQuestion4">4. Bagaimana kemampuan x terhadap z dalam menyelesaikan tanggung jawabnya?</string>
    <string name="tv_reportQuestion5">5. Bagaimana kemampuan x terhadap z dalam menyelesaikan tanggung jawabnya?</string>
    <string name="tv_reportQuestion6">6. Bagaimana kemampuan x terhadap z dalam menyelesaikan tanggung jawabnya?</string>
    <string name="tv_reportQuestion7">7. Bagaimana kemampuan x terhadap z dalam menyelesaikan tanggung jawabnya?</string>
    <string name="tv_reportQuestion8">8. Bagaimana kemampuan x terhadap z dalam menyelesaikan tanggung jawabnya?</string>
    <string name="tv_reportQuestion9">9. Bagaimana kemampuan x terhadap z dalam menyelesaikan tanggung jawabnya?</string>
    <string name="tv_reportQuestion10">10. Bagaimana kemampuan x terhadap z dalam menyelesaikan tanggung jawabnya?</string>

    //PagerAdapter
    <string name="requestAdapter1">Student Request</string>
    <string name="requestAdapter2">Logbook Request</string>
    <string name="courseAdminAdapter1">Video</string>
    <string name="courseAdminAdapter2">Modul</string>
    <string name="homeAdminAdapter1">Daftar Perusahaan</string>
    <string name="homeAdminAdapter2">Daftar Logbook</string>
    <string name="loremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, >Lorem ipsum dolorLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, >Lorem ipsum dolorLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum es dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna. Curabitur vel bibendum lorem. Morbi Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna. Curabitur vel bibendum lorem. Morbi Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringi Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringi</string>

    //Report
    <string name="Report1">Laporan 1</string>
    <string name="Report2">Laporan 2</string>
    <string name="Report3">Laporan 3</string>
    <string name="Report4">Laporan 4</string>
    <string name="question1">1. Bagaimana tingkat kedisiplinan waktu pada siswa ini?</string>
    <string name="question2">2. Bagaimana tingkat kehadiran di tempat kerja pada siswa ini?</string>
    <string name="question3">3. Bagaimana tingkat kemauan kerja dan motivasi pada siswa ini?</string>
    <string name="question4">4. Bagaimana tingkat inisiatif dan kreatifitas pada siswa ini?</string>
    <string name="question5">5. Bagaimana tingkat ketepatan waktu dalam pelaksanan tugas pada siswa ini?</string>
    <string name="question6">6. Bagaimana tingkat kualitas hasil kerja pada siswa ini?</string>
    <string name="question7">7. Bagaimana tingkat efektifitas dan efisiensi pada siswa ini?</string>
    <string name="question8">8. Bagaimana tingkat tanggung jawab dan dedikasi pada siswa ini?</string>
    <string name="question9">9. Bagaimana tingkat penggunaan prosedur kerja pada siswa ini?</string>
    <string name="question10">10. Bagaimana tingkat penguasaan penggunaan alat pada siswa ini?</string>
    <string name="question11">11. Bagaimana tingkat kemampuan berkomunikasi pada siswa ini?</string>

    <string name="question12">12. Bagaimana tingkat cara berpakaian pada siswa ini?</string>
    <string name="question13">13. Bagaimana tingkat perilaku pada siswa ini?</string>
    <string name="question14">14. Bagaimana tingkat sikap terhadap pimpinan pada siswa ini?</string>
    <string name="question15">15. Bagaimana tingkat proaktif dalam melaksanakan tugas pada siswa ini?</string>
    <string name="question16">16. Bagaimana tingkat responsifitas dalam tugas yang diberikan pada siswa ini?</string>
    <string name="question17">17. Bagaimana tingkat respek siswa terhadap instruksi pada siswa ini?</string>
    <string name="question18">18. Silahkan masukkan kritik dan saran perusahaan terhadap etos kerja dan sikap pada siswa ini</string>


</resources>