<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_primary"
    tools:context=".ui.company.home.AddReportStudentFragment">

    <View
        android:id="@+id/iv_bar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:background="@color/red_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Bartittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proza_libre"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_bar" />

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/ic_back_button"
        app:layout_constraintBottom_toBottomOf="@+id/tv_Bartittle"
        app:layout_constraintEnd_toStartOf="@+id/tv_Bartittle"
        app:layout_constraintTop_toTopOf="@+id/tv_Bartittle"
        app:tint="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_question1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/tv_reportQuestion1"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_answer1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/open_sans"
                        android:hint="Silahkan jawab disini"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question1"
                        app:layout_constraintStart_toStartOf="@+id/tv_question1"
                        app:layout_constraintTop_toBottomOf="@+id/tv_question1" />

                    <TextView
                        android:id="@+id/tv_question2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/tv_reportQuestion2"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question1"
                        app:layout_constraintStart_toStartOf="@+id/tv_question1"
                        app:layout_constraintTop_toBottomOf="@+id/et_answer1" />

                    <EditText
                        android:id="@+id/et_answer2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/open_sans"
                        android:hint="Silahkan jawab disini"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question2"
                        app:layout_constraintStart_toStartOf="@+id/tv_question2"
                        app:layout_constraintTop_toBottomOf="@+id/tv_question2" />

                    <TextView
                        android:id="@+id/tv_question3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/tv_reportQuestion3"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question2"
                        app:layout_constraintStart_toStartOf="@+id/tv_question2"
                        app:layout_constraintTop_toBottomOf="@+id/et_answer2" />

                    <EditText
                        android:id="@+id/et_answer3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/open_sans"
                        android:hint="Silahkan jawab disini"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question3"
                        app:layout_constraintStart_toStartOf="@+id/tv_question3"
                        app:layout_constraintTop_toBottomOf="@+id/tv_question3" />

                    <TextView
                        android:id="@+id/tv_question4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/tv_reportQuestion4"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question3"
                        app:layout_constraintStart_toStartOf="@+id/tv_question3"
                        app:layout_constraintTop_toBottomOf="@+id/et_answer3" />

                    <EditText
                        android:id="@+id/et_answer4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/open_sans"
                        android:hint="Silahkan jawab disini"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question4"
                        app:layout_constraintStart_toStartOf="@+id/tv_question4"
                        app:layout_constraintTop_toBottomOf="@+id/tv_question4" />

                    <TextView
                        android:id="@+id/tv_question5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/tv_reportQuestion5"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question4"
                        app:layout_constraintStart_toStartOf="@+id/tv_question4"
                        app:layout_constraintTop_toBottomOf="@+id/et_answer4" />

                    <EditText
                        android:id="@+id/et_answer5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/open_sans"
                        android:hint="Silahkan jawab disini"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question5"
                        app:layout_constraintStart_toStartOf="@+id/tv_question5"
                        app:layout_constraintTop_toBottomOf="@+id/tv_question5" />

                    <TextView
                        android:id="@+id/tv_question6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/tv_reportQuestion6"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question5"
                        app:layout_constraintStart_toStartOf="@+id/tv_question5"
                        app:layout_constraintTop_toBottomOf="@+id/et_answer5" />

                    <EditText
                        android:id="@+id/et_answer6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/open_sans"
                        android:hint="Silahkan jawab disini"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question6"
                        app:layout_constraintStart_toStartOf="@+id/tv_question6"
                        app:layout_constraintTop_toBottomOf="@+id/tv_question6" />

                    <TextView
                        android:id="@+id/tv_question7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/tv_reportQuestion7"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question6"
                        app:layout_constraintStart_toStartOf="@+id/tv_question6"
                        app:layout_constraintTop_toBottomOf="@+id/et_answer6" />

                    <EditText
                        android:id="@+id/et_answer7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/open_sans"
                        android:hint="Silahkan jawab disini"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question7"
                        app:layout_constraintStart_toStartOf="@+id/tv_question7"
                        app:layout_constraintTop_toBottomOf="@+id/tv_question7" />

                    <TextView
                        android:id="@+id/tv_question8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/tv_reportQuestion8"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question7"
                        app:layout_constraintStart_toStartOf="@+id/tv_question7"
                        app:layout_constraintTop_toBottomOf="@+id/et_answer7" />

                    <EditText
                        android:id="@+id/et_answer8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/open_sans"
                        android:hint="Silahkan jawab disini"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question8"
                        app:layout_constraintStart_toStartOf="@+id/tv_question8"
                        app:layout_constraintTop_toBottomOf="@+id/tv_question8" />

                    <TextView
                        android:id="@+id/tv_question9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/tv_reportQuestion9"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question8"
                        app:layout_constraintStart_toStartOf="@+id/tv_question8"
                        app:layout_constraintTop_toBottomOf="@+id/et_answer8" />

                    <EditText
                        android:id="@+id/et_answer9"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/open_sans"
                        android:hint="Silahkan jawab disini"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question9"
                        app:layout_constraintStart_toStartOf="@+id/tv_question9"
                        app:layout_constraintTop_toBottomOf="@+id/tv_question9" />

                    <TextView
                        android:id="@+id/tv_question10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/open_sans"
                        android:text="@string/tv_reportQuestion10"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question9"
                        app:layout_constraintStart_toStartOf="@+id/tv_question9"
                        app:layout_constraintTop_toBottomOf="@+id/et_answer9" />

                    <EditText
                        android:id="@+id/et_answer10"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:fontFamily="@font/open_sans"
                        android:hint="Silahkan jawab disini"
                        android:inputType="textPersonName"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/tv_question10"
                        app:layout_constraintStart_toStartOf="@+id/tv_question10"
                        app:layout_constraintTop_toBottomOf="@+id/tv_question10" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="32dp"
                        android:background="@drawable/bg_btn"
                        android:fontFamily="@font/roboto"
                        android:text="SIMPAN"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/et_answer10"
                        app:layout_constraintStart_toStartOf="@+id/et_answer10"
                        app:layout_constraintTop_toBottomOf="@+id/et_answer10" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>